--- a/src/content/posts/welcome-to-codex.mdx
+++ b/src/content/posts/welcome-to-codex.mdx
@@ -1,19 +1,19 @@
 export const meta = {
-  title: 'Welcome to Codex: Why calculators and context matter',
-  slug: 'welcome-to-codex',
-  excerpt: 'A quick tour of the Codex platform and how we design calculators that empower everyday health decisions.',
+  title: 'Welcome to Health Gauge: Why calculators and context matter',
+  slug: 'welcome-to-health-gauge',
+  excerpt: 'A quick tour of the Health Gauge platform and how we design calculators that empower everyday health decisions.',
   category: 'Product',
   date: '2024-11-18',
-  author: 'Codex Editorial Team',
+  author: 'Health Gauge Editorial Team',
   tags: ['product', 'health-tech'],
   readingTime: '4 min'
 };
 
 import { AdSlot } from '../../components/AdSlot';
 
-# Welcome to Codex
+# Welcome to Health Gauge
 
-Codex began with a simple observation: most people know *what* they want to improve—sleep, energy, body composition—but feel lost when converting goals into numbers.
+Health Gauge began with a simple observation: most people know *what* they want to improve—sleep, energy, body composition—but feel lost when converting goals into numbers.
 
 Our calculators follow three principles:
 
@@ -25,4 +25,4 @@ We also curate a newsroom with analyses on nutrition policy, longevity research,
 
 <AdSlot slotId="1234567890" />
 
-Whether you are coaching clients or personalizing your own routine, Codex keeps data, context, and trustworthy sources in one tab.
+Whether you are coaching clients or personalizing your own routine, Health Gauge keeps data, context, and trustworthy sources in one tab.
